source-kafka/tests/it/snapshots/it__check_test.snap
---
source: tests/it/main.rs
expression: parse_from_output(&stdout)

---
validated:
  bindings:
    - resourcePath:
        - __consumer_offsets

