source-kafka/tests/it/snapshots/it__read_simple_catalog_test.snap
---
source: tests/it/main.rs
expression: "&messages[last_ten]"

---
- record:
    data:
      completed: true
      id: 156
      title: nam quia quia nulla repellat assumenda quibusdam sit nobis
      userId: 8
    emitted_at: "{{ UNIX_TIMESTAMP }}"
    namespace: Partition 0
    stream: todo-list
  type: RECORD
- state:
    data:
      todo-list:
        "0":
          UpThrough: 35
        "1":
          UpThrough: 59
        "2":
          UpThrough: 59
        "3":
          UpThrough: 39
  type: STATE
- record:
    data:
      completed: true
      id: 157
      title: dolorem veniam quisquam deserunt repellendus
      userId: 8
    emitted_at: "{{ UNIX_TIMESTAMP }}"
    namespace: Partition 0
    stream: todo-list
  type: RECORD
- state:
    data:
      todo-list:
        "0":
          UpThrough: 36
        "1":
          UpThrough: 59
        "2":
          UpThrough: 59
        "3":
          UpThrough: 39
  type: STATE
- record:
    data:
      completed: true
      id: 158
      title: debitis vitae delectus et harum accusamus aut deleniti a
      userId: 8
    emitted_at: "{{ UNIX_TIMESTAMP }}"
    namespace: Partition 0
    stream: todo-list
  type: RECORD
- state:
    data:
      todo-list:
        "0":
          UpThrough: 37
        "1":
          UpThrough: 59
        "2":
          UpThrough: 59
        "3":
          UpThrough: 39
  type: STATE
- record:
    data:
      completed: true
      id: 159
      title: debitis adipisci quibusdam aliquam sed dolore ea praesentium nobis
      userId: 8
    emitted_at: "{{ UNIX_TIMESTAMP }}"
    namespace: Partition 0
    stream: todo-list
  type: RECORD
- state:
    data:
      todo-list:
        "0":
          UpThrough: 38
        "1":
          UpThrough: 59
        "2":
          UpThrough: 59
        "3":
          UpThrough: 39
  type: STATE
- record:
    data:
      completed: false
      id: 160
      title: et praesentium aliquam est
      userId: 8
    emitted_at: "{{ UNIX_TIMESTAMP }}"
    namespace: Partition 0
    stream: todo-list
  type: RECORD
- state:
    data:
      todo-list:
        "0":
          UpThrough: 39
        "1":
          UpThrough: 59
        "2":
          UpThrough: 59
        "3":
          UpThrough: 39
  type: STATE

